--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.3.1",
-    "@dnd-kit/sortable": "^10.0.0",
     "@expo/metro-runtime": "^6.1.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@supabase/supabase-js": "^2.50.5",
@@ -18,37 +16,30 @@
     "date-fns": "^4.1.0",
     "expo": "^54.0.30",
     "expo-status-bar": "^3.0.9",
-    "framer-motion": "^12.23.24",
-    "lucide-react": "^0.344.0",
     "lucide-react-native": "^0.562.0",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.83.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.14.1",
-    "react-native-screens": "4.3.0",
+    "react-native": "0.81.5",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.2",
-    "react-native-worklets-core": "^1.6.2",
-    "recharts": "^3.1.0"
+    "react-native-worklets-core": "^1.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.18",
     "babel-preset-expo": "^54.0.9",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.5.3",
-    "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "typescript-eslint": "^8.3.0"
   }
 }
